feat: enhance crop, notification, and treatment services with new features, refactor code, and improve error handling